@@ -78,7 +78,7 @@ puts $f {
 	lrem names ComSpec
 	lrem names ""
     }	
-    foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH PURE_PROG_NAME DISPLAY SHLIB_PATH } {
+    foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH PURE_PROG_NAME DISPLAY SHLIB_PATH } {
 	lrem names $name
     }
     foreach p $names {
@@ -107,7 +107,7 @@ foreach name [array names env] {
 # Added the following lines so that child tcltest can actually find its
 # library if the initial tcltest is run from a non-standard place.
 # ('saved' env vars)
-foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH DISPLAY SHLIB_PATH} {
+foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH DISPLAY SHLIB_PATH} {
   if {[info exists env2($name)]} {
      set env($name) $env2($name);
   }
